--- a/styles/style.css
+++ b/styles/style.css
@@ -153,7 +153,7 @@ body {
 }
 
 #about-me {
-  margin-top: 130px;
+  margin: 130px 0;
 }
 #about-me > div {
   width: 1140px;
@@ -173,9 +173,9 @@ body {
 }
 #about-me .about-info {
   display: grid;
- display: flex;
- align-items: center;
- justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   margin-top: 30px;
 }
 
@@ -192,5 +192,52 @@ body {
   font-size: 20px;
   font-weight: 700;
   line-height: 30px;
- 
+}
+
+/* what i do section */
+
+#what-i-do {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+.what-i-do {
+}
+.what-i-do > p {
+  max-width: 909px;
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+.skills-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 24px;
+}
+
+.skills-container .skill {
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  padding: 30px;
+}
+.skills-container .skill > h3 {
+  color: #181818;
+  font-size: 20px;
+  font-weight: 700;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.skills-container .skill > p {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  max-width: 201px;
 }
