--- a/styles/style.css
+++ b/styles/style.css
@@ -199,10 +199,9 @@ body {
 #what-i-do {
   max-width: 1140px;
   margin: 0 auto;
+  margin-bottom: 130px;
 }
 
-.what-i-do {
-}
 .what-i-do > p {
   max-width: 909px;
   color: #757575;
@@ -240,4 +239,53 @@ body {
   font-weight: 400;
   line-height: 28px;
   max-width: 201px;
+}
+
+/* resume section */
+
+#resume {
+  
+  max-width: 1140px;
+  margin: 0 auto 113px;
+}
+
+#resume .row {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+
+#resume .row {
+  margin-top: 113px;
+}
+#resume .row .resume-title {
+  margin-bottom: 30px;
+  color: #474747;
+  font-size: 30px;
+  font-weight: 700;
+}
+#resume .column > div > h3 {
+  margin-bottom: 10px;
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
+}
+
+#resume .column > div > h4 {
+  color: #757575;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+#resume .column > div > p {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  max-width: 511px;
+  margin-bottom: 30px;
+}
+#resume .column > div > hr {
+  margin-bottom: 30px;
 }
