--- a/styles/style.css
+++ b/styles/style.css
@@ -94,9 +94,11 @@ body {
   padding-left: 230px;
   padding-right: 38px;
 }
-
-.hero-content {
+.hero-image img {
+  max-width: 100%;
+  height: auto;
 }
+
 .hero-content > h3 {
   color: #474747;
   font-size: 45px;
@@ -125,7 +127,7 @@ body {
   gap: 30px;
 }
 
-.btn-container  > button:first-child{
+.btn-container > button:first-child {
   padding: 18px;
   border-radius: 5px;
   background: #fd6e0a;
@@ -160,7 +162,7 @@ body {
   margin: 130px 0;
 }
 #about-me > div {
-  width: 1140px;
+  max-width: 1140px;
   margin: 0 auto;
   border-radius: 10px;
   background: #fff8f3;
@@ -176,7 +178,6 @@ body {
   margin: 30px 0;
 }
 #about-me .about-info {
-  display: grid;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -307,7 +308,7 @@ body {
   align-items: center;
   gap: 10px;
   display: block;
-  margin: 50px auto 0; 
+  margin: 50px auto 0;
 }
 /* footer styles */
 
@@ -396,4 +397,146 @@ footer form input[type="submit"] {
   font-size: 20px;
   font-weight: 700;
   cursor: pointer;
+}
+
+.hide {
+  display: none;
+}
+/* responsive for mobile */
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .skills-container {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 1rem;
+  }
+  #about-me > div {
+    padding: 0 4rem;
+  }
+  #about-me .about-info {
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  #about-me {
+    margin: 80px 0;
+  }
+  #what-i-do {
+    margin-bottom: 80px;
+  }
+  #resume {
+    margin:  0 auto 80px;
+  }
+  .header {
+    background-image: none;
+  }
+  #resume .row {
+    margin-top: 60px;
+  }
+  .header > nav,
+  .header > nav > ul {
+    flex-direction: column;
+  }
+  .hero-content {
+    margin-top: 3rem;
+  }
+  .header > nav > ul {
+    gap: 25px;
+    margin-top: 25px;
+    margin-bottom: 4rem;
+  }
+  .section-title {
+    font-size: 25px;
+  }
+  #resume .row .resume-title {
+    font-size: 22px;
+  }
+  .header > .developer {
+    display: none;
+  }
+  #resume .column > div > h3 {
+    font-size: 18px;
+  }
+  #resume .column > div > h4 {
+    font-size: 1rem;
+  }
+  .header > nav {
+    padding: 0;
+  }
+  .hero-content > h3 {
+    font-size: 18px;
+  }
+  .hero-content > h1 {
+    font-size: 25px;
+  }
+  .hero {
+    flex-direction: column-reverse;
+    padding: 0 1rem;
+  }
+  .skills-container {
+    grid-template-columns: 1fr;
+    padding: 0 1rem;
+  }
+  .skills-container .skill > p {
+    max-width: none;
+  }
+  .what-i-do > p {
+    padding: 0 1rem;
+    max-width: none;
+  }
+
+  .header > nav button {
+    padding: 12px 28px;
+    font-size: 16px;
+    font-weight: 500;
+  }
+
+  #about-me > div {
+    padding: 1rem;
+  }
+  #about-me .about-info {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  #resume .row {
+    grid-template-columns: 1fr;
+    padding: 1rem;
+  }
+
+  footer > div {
+    grid-template-columns: 1fr;
+    padding: 0 1rem;
+  }
+  footer section:first-child > h3,
+  footer > div section:last-child > h3 {
+    font-size: 25px;
+  }
+  footer section:first-child > ul i {
+    font-size: 18px;
+  }
+  .btn-container > button:first-child,
+  .btn-container > button:last-child {
+    padding: 13px;
+    font-size: 14px;
+    font-weight: 600;
+  }
+
+  .btn-container {
+    gap: 1rem;
+  }
+
+  #resume .download-cv-btn {
+    padding: 13px;
+    font-size: 14px;
+    font-weight: 600;
+    margin: 33px auto 0;
+  }
+
+  footer form input[type="submit"] {
+    padding: 12px 32px;
+    font-size: 16px;
+    font-weight: 600;
+  }
 }
